--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -1,6 +1,6 @@
 <header>
   <div class="text-white bg-dark" style="height: 80vh; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: 50% 75%; background-repeat: no-repeat;">
-    <div class="container mt-3">
+    <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">{{ site.title }}</a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
@@ -10,7 +10,7 @@
         </nav>
       </div>
     </div>
-    <div class="container d-flex align-items-center justify-content-center">
+    <div class="d-flex align-items-center justify-content-center">
       <div>
         {{ page.title }}
       </div>
