--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -10,12 +10,12 @@
         </nav>
       </div>
     </div>
-    <div class="d-flex flex-column align-items-center justify-content-center">
+    <div class="h-100 d-flex flex-column align-items-center justify-content-center">
       <div>
         <span class="fs-1 text-capitalize">{{ page.title }}</span>
       </div>
       <div>
-        <span class="fs-1 text-uppercase">{{ page.no-punggung }}</span>
+        <span class="text-uppercase fw-bolder" style="font-size: 5em;">{{ page.no-punggung }}</span>
       </div>
     </div>
   </div>
