--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -12,10 +12,10 @@
     </div>
     <div class="h-100 d-flex flex-column align-items-center justify-content-center">
       <div>
-        <span class="fs-1 text-capitalize">{{ page.title }}</span>
+        <span class="text-capitalize" style="font-size: 5em;">{{ page.title }}</span>
       </div>
       <div>
-        <span class="text-uppercase fw-bolder" style="font-size: 5em;">{{ page.no-punggung }}</span>
+        <span class="text-uppercase fw-bolder" style="font-size: 8em;">{{ page.no-punggung }}</span>
       </div>
     </div>
   </div>
