--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -12,10 +12,10 @@
     </div>
     <div class="h-100 d-flex flex-column align-items-center justify-content-center">
       <div>
-        <span class="text-center text-capitalize" style="font-size: 3em;">{{ page.title }}</span>
+        <span class="text-center text-capitalize" style="font-size: 3rem;">{{ page.title }}</span>
       </div>
       <div>
-        <span class="text-uppercase fw-bolder" style="font-size: 6em;">{{ page.no-punggung }}</span>
+        <span class="text-uppercase fw-bolder" style="font-size: 6rem;">{{ page.no-punggung }}</span>
       </div>
     </div>
   </div>
