--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,26 +16,11 @@
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
     <script src="{{ 'assets/function.js' | relative_url }}"></script>
   </head>
-  <body> <!--
-    <div class="text-white bg-dark" {% if page.image %} style="height: 100vh; background-image: linear-gradient(
-      rgba(0, 0, 0, 0.8),
-      rgba(0, 0, 0, 0.8)
-    ), url('{{ page.image }}'); background-size: cover; background-position: center;" {% endif %} >
-      <div class="container">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-3">
-          <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none fw-bold">{{ site.title }}</a>
-          <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            {% assign currentPage = page.url %}
-            <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="/">Home</a>
-            <a {% if currentPage == '/players/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 link-light" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
-          </nav>
-        </header>
-      </div>
-    </div> -->
+  <body> 
     {% if page.header %}
-    {% include {{ page.header | append: '.html' }} %}
+      {% include {{ page.header | append: '.html' }} %}
     {% else %}
-    {% include header-image.html %}
+      {% include header-image.html %}
     {% endif %}
     <main>
       {{ content }}
@@ -49,9 +34,7 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>bbh
+    hjj
   </body>
 </html>
