--- a/_includes/sponsor.html
+++ b/_includes/sponsor.html
@@ -1,6 +1,6 @@
-<div class="bg-dark text-white">
-  <div class="container">
-    <div class="text-center fw-bolder text-uppercase">our sponsor</div>
+<div class="bg-light">
+  <div class="container py-5">
+    <div class="text-center fw-bolder text-uppercase pb-3">our sponsor</div>
     <div class="row row-cols-3">
       <div class="col">
         <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid">
