--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,11 @@
-<footer>
-  <div>
-    
+<footer class="bg-light">
+  <div class="container">
+    <div><small class="text-center text-secondary">© 2022 TESA FOOTBALL CLUB.</small></div>
+  </div>
+  <div class="container">
+    <div class="d-flex align-items-center justify-content-center">
+      <img src="{{ 'assets/img/logo-1.png' | relative_url }}" class="img-fluid">
+      <div class="text-uppercase fs-1 fw-bold">{{ site.title }}</div>
+    </div>
   </div>
 </footer>
