--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,7 @@
       {{ content }}
     </main>
     {% include sponsor.html %}
-    <footer>
-      <div class="container">
-        <div class="my-5 py-3">
-          <p class="text-center">
-            <small class="text-secondary">© 2022 TESA FOOTBALL CLUB.</small>
-          </p>
-        </div>
-      </div>
-    </footer>
+    {% include footer.html %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
