--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="bg-light">
   <div class="container">
-    <div><small class="text-center text-secondary">© 2022 TESA FOOTBALL CLUB.</small></div>
+    <div class="text-center text-secondary"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
   </div>
   <div class="container">
     <div class="d-flex align-items-center justify-content-center">
-      <img src="{{ 'assets/img/logo-1.png' | relative_url }}" class="img-fluid">
+      <img src="{{ 'assets/img/logo-1.png' | relative_url }}" class="img-fluid" width="300" height="300">
       <div class="text-uppercase fs-1 fw-bold">{{ site.title }}</div>
     </div>
   </div>
