--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-light">
-  <div class="container">
+  <div class="container py-5">
     <div class="text-center text-secondary"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
   </div>
 </footer>
