--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -14,7 +14,7 @@
     {% assign matches = site.matches %}
     {% for match in matches %}
     {% if match.status == "next match" %}
-    <div class="container">
+    <div class="container text-white bg-dark">
       <h1>next match</h1>
       <div class="row row-cols-1">
         <div class="col">
