--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -19,7 +19,7 @@
         <div class="col">
           <div class="card bg-dark text-white">
             <div class="card-body py-5">
-              <h1 class="text-uppercase">next match</h1>
+              <h1 class="text-uppercase pb-5">next match</h1>
               <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.type }}</small> • <small class="text-capitalize">{{ match.competition }}</small></p>
               <p class="card-text text-secondary"><small class="text-capitalize">{{ match.date | date: "%d %B %Y • %R" | append: " WIB" }}</small></p>
               <div class="row row-cols-3 text-center py-5">
