--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -17,12 +17,12 @@
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card bg-dark text-white">
+          <div class="card bg-transparent text-white">
             <div class="card-body py-3">
               <h1 class="text-uppercase fw-bolder pb-5">next match</h1>
               <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.type }}</small> • <small class="text-capitalize">{{ match.competition }}</small></p>
               <p class="card-text text-secondary"><small class="text-capitalize">{{ match.date | date: "%d %B %Y • %R" | append: " WIB" }}</small></p>
-              <div class="row row-cols-3 text-center py-5">
+              <div class="row row-cols-3 text-center py-3">
                 <div class="col"><span class="fw-bold text-uppercase">{{ match.home }}</span></div>
                 <div class="col"><span class="fw-bold">vs</span></div>
                 <div class="col"><span class="fw-bold text-uppercase">{{ match.away }}</span></div>
