--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -14,17 +14,17 @@
     {% assign matches = site.matches %}
     {% for match in matches %}
     {% if match.status == "next match" %}
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center">
+    <div class="container h-100 text-center">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card bg-dark text-white pb-5">
+          <div class="card bg-dark text-white">
             <div class="card-body">
               <h1 class="text-uppercase fw-bolder pb-5">next match</h1>
               <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.type }}</small> • <small class="text-capitalize">{{ match.competition }}</small></p>
               <p class="card-text text-secondary"><small class="text-capitalize">{{ match.date | date: "%d %B %Y • %R" | append: " WIB" }}</small></p>
               <div class="row row-cols-3 text-center py-5">
                 <div class="col"><span class="fw-bold text-uppercase">{{ match.home }}</span></div>
-                <div class="col"><span class="fs-1 fw-bold">vs</span></div>
+                <div class="col"><span class="fw-bold">vs</span></div>
                 <div class="col"><span class="fw-bold text-uppercase">{{ match.away }}</span></div>
               </div>
               <p class="card-text text-secondary text-capitalize">{{ match.place }}</p>
