--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -14,7 +14,7 @@
     {% assign matches = site.matches %}
     {% for match in matches %}
     {% if match.status == "next match" %}
-    <div class="container h-100 text-center mt-5">
+    <div class="container h-100 d-flex flex-column justify-content-center text-center mb-5">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card bg-dark text-white">
