--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="vh-100 text-white bg-dark" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: 50% 75%; background-repeat: no-repeat;">
+  <div class="text-white bg-dark" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: 50% 75%; background-repeat: no-repeat;">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">{{ site.title }}</a>
@@ -14,10 +14,10 @@
     {% assign matches = site.matches %}
     {% for match in matches %}
     {% if match.status == "next match" %}
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card bg-dark text-white pb-5">
+          <div class="card bg-dark text-white">
             <div class="card-body py-5">
               <h1 class="text-uppercase fw-bolder pb-5">next match</h1>
               <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.type }}</small> • <span class="text-capitalize">{{ match.competition }}</span></p>
