--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -14,10 +14,10 @@
     {% assign matches = site.matches %}
     {% for match in matches %}
     {% if match.status == "next match" %}
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5 mb-5">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card bg-dark text-white">
+          <div class="card bg-transparent text-white">
             <div class="card-body py-3">
               <h1 class="text-uppercase fw-bolder pb-5">next match</h1>
               <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.type }}</small> • <span class="text-capitalize">{{ match.competition }}</span></p>
