--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -18,7 +18,7 @@
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent">
-            <div class="card-body">
+            <div class="card-body py-3">
               <h1 class="text-uppercase fw-bolder pb-5">{{ page.result.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
               <p class="text-uppercase text-secondary"><small>{{ page.kickoff }}</small></p>
