--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -17,8 +17,8 @@
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card text-white bg-transparent">
-            <div class="card-body py-3">
+          <div class="card text-white bg-transparent border border-white">
+            <div class="card-body">
               <h1 class="text-uppercase fw-bolder pb-5">{{ page.result.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
               <p class="text-uppercase text-secondary"><small>{{ page.kickoff }}</small></p>
@@ -59,7 +59,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize text-secondary">{{ page.place }}</p>
+              <p class="card-text text-capitalize text-secondary pt-3">{{ page.place }}</p>
             </div>
           </div>
         </div>
