--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -16,8 +16,8 @@
     </div>
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
-        <div class="col">
-          <div class="card text-white bg-transparent border border-white" style="filter: blur(3px);">
+        <div class="col" style="filter: blur(3px);">
+          <div class="card text-white bg-transparent border border-white">
             <div class="card-body py-3">
               <h1 class="text-uppercase fw-bolder pb-5">{{ page.result.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
@@ -59,7 +59,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize text-secondary pt-3">{{ page.place }}</p>
+              <p class="card-text text-capitalize text-secondary pt-5">{{ page.place }}</p>
             </div>
           </div>
         </div>
