--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -42,6 +42,7 @@
                 </div>
               </div>
               {% if page.result.status == "full time" %}
+              <h6 class="text-center text-uppercase mb-0">goal</h6>
               <div class="row row-cols-2 g-0 pb-5">
                 {% if page.result.goal.home %}
                 <ul class="col list-group">
@@ -59,7 +60,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize text-secondary pt-5">{{ page.place }}</p>
+              <p class="card-text text-capitalize text-secondary pt-3">{{ page.place }}</p>
             </div>
           </div>
         </div>
