--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,15 +13,16 @@ header: header-match
             <div class="card-header d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div>
-                <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="45" height="45">
+                <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
                 <span class="text-uppercase fw-bolder px-2">vs</span>
-                <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="45" height="45">
+                <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
               </div>
             </div>
             <div class="pt-5 pb-3 text-white bg-transparent">
-              <div class="row row-cols-2">
+              <div class="row row-cols-3">
                 {% for player in page.lineup %}
-                <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
+                <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary">{{ player.no-punggung }}</span>
+                <span class="col-2 fs-5 text-uppercase text-center badge bg-secondary">{{ player.position }}</span>
                 <span class="col-10 fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 {% endfor %}
               </div>
