--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,17 +13,17 @@ header: header-match
             <div class="card-header d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div>
-                <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
+                <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
                 <span class="text-uppercase fw-bolder px-2">vs</span>
-                <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
+                <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
               </div>
             </div>
             <div class="pt-5 pb-3 text-white bg-transparent">
               <div class="row row-cols-3">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary">{{ player.no-punggung }}</span>
-                <span class="col-2 fs-5 text-uppercase text-center badge bg-secondary">{{ player.position }}</span>
-                <span class="col-8 fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
+                <span class="col-1 fs-6 text-uppercase text-center badge bg-secondary">{{ player.position }}</span>
+                <span class="col-9 fs-4 fw-bolder text-uppercase">{{ player.name }}{% if player.role == "captain" %}<span class="badge rounded-pill bg-success">{{ C }}</span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
