--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -19,11 +19,11 @@ header: header-match
               </div>
             </div>
             <div class="pt-5 pb-3 text-white bg-transparent">
-              <div class="row row-cols-3">
+              <div class="row row-cols-3 g-0">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary">{{ player.no-punggung }}</span>
-                <span class="col-1 fs-6 text-uppercase text-center badge bg-secondary">{{ player.position }}</span>
-                <span class="col-9 fs-4 fw-bolder text-uppercase">{{ player.name }}{% if player.role == "captain" %}<span class="badge rounded-pill bg-success">{{ C }}</span>{% endif %}</span>
+                <span class="col-2 fs-5 text-uppercase text-center badge bg-secondary">{{ player.position }}</span>
+                <span class="col-8 fs-4 fw-bolder text-uppercase">{{ player.name }}{% if player.role == "captain" %}<span class="badge rounded-pill bg-success">C</span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
