--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -22,8 +22,8 @@ header: header-match
               <div class="row row-cols-3 g-0">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary">{{ player.no-punggung }}</span>
-                <span class="col-2 fs-5 text-uppercase text-center badge bg-secondary">{{ player.position }}</span>
-                <span class="col-8 fs-4 fw-bolder text-uppercase">{{ player.name }}{% if player.role == "captain" %}<span class="badge rounded-pill bg-success">C</span>{% endif %}</span>
+                <span class="col-2 fs-5 text-uppercase text-center badge bg-secondary py-2 px-2">{{ player.position }}</span>
+                <span class="col-8 fs-4 fw-bolder text-uppercase">{{ player.name }}{% if player.role == "captain" %}<span class="badge rounded-pill bg-success text-uppercase ps-2">c</span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
